Increase search text size to prevent auto-zoom on iOS

--- a/assets/app/layout/search.scss
+++ b/assets/app/layout/search.scss
@@ -6,8 +6,11 @@
     border-bottom: 1px solid $green;
     display: flex;
     font-family: $code;
-    font-size: 0.875em;
     padding: 0;
+
+    .main & {
+      margin: 0 $base-spacing;
+    }
 
     &:before {
       content: "~ $ ";
